[package]
name = "quic-quinn"
version = "0.1.0"
authors = ["vjy <vijay@iavian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16"
mio = "0.6"
quiche = { git = "https://github.com/cloudflare/quiche", rev = "2f2dfab" }
log = { version = "0.4.8", features = ["std", "max_level_trace","release_max_level_trace"] }
url = "1"

[profile.release]
opt-level = 3