[package]
name = "quic-quinn"
version = "0.1.0"
authors = ["vjy <vijay@iavian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
rcgen="0.7.0"
quinn = { git = "https://github.com/djc/quinn", rev = "a2b5a4ac5ee39d1ba70b39ad1cff24f924bcebdb" }
tokio = { version = "0.2.13", features = ["macros", "fs"] }
tracing = "0.1.10"
anyhow = "1.0.22"
directories = "2.0.2"
unwrap = "1.2.1"

[profile.release]
opt-level = 3